[package]
name = "rayst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rayst"
path = "src/lib.rs"

[[bin]]
name = "rayst-render"
path = "src/bin.rs"

[dependencies]
image = "0.24.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"